--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "a": "^2.1.2",
+    "angular2-cookie": "^1.2.6",
     "hammerjs": "^2.0.8",
+    "jspdf": "^1.5.3",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^8.14.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
